.metals/metals.log
2023.04.20 12:33:48 INFO  Started: Metals version 0.11.11 in workspace '/Users/ericsimac/OOAD/Brewery-Project' for client Visual Studio Code 1.77.3.
SLF4J: No SLF4J providers were found.
SLF4J: Defaulting to no-operation (NOP) logger implementation
SLF4J: See https://www.slf4j.org/codes.html#noProviders for further details.
SLF4J: Class path contains SLF4J bindings targeting slf4j-api versions 1.7.x or earlier.
SLF4J: Ignoring binding found at [jar:file:/Users/ericsimac/Library/Caches/Coursier/v1/https/repo1.maven.org/maven2/com/outr/scribe-slf4j_2.13/3.11.0/scribe-slf4j_2.13-3.11.0.jar!/org/slf4j/impl/StaticLoggerBinder.class]
SLF4J: See https://www.slf4j.org/codes.html#ignoredBindings for an explanation.
2023.04.20 12:33:49 INFO  time: initialize in 1.14s
2023.04.20 12:33:55 WARN  Build server is not auto-connectable.
2023.04.20 12:33:55 WARN  no build tool detected in workspace '/Users/ericsimac/OOAD/Brewery-Project'. The most common cause for this problem is that the editor was opened in the wrong working directory, for example if you use sbt then the workspace directory should contain build.sbt. 
2023.04.20 12:33:55 WARN  no build target for: /Users/ericsimac/OOAD/Brewery-Project/Manager.java
2023.04.20 12:33:57 INFO  time: code lens generation in 1.68s
2023.04.20 12:33:57 INFO  time: code lens generation in 1.9s
2023.04.20 12:38:04 WARN  Running javac-semanticdb failed for file:///Users/ericsimac/OOAD/Brewery-Project/Manager.java. Output:
/Users/ericsimac/OOAD/Brewery-Project/Manager.java:166: error: illegal start of type
<<<<<<< HEAD
^
/Users/ericsimac/OOAD/Brewery-Project/Manager.java:166: error: > expected
<<<<<<< HEAD
            ^
/Users/ericsimac/OOAD/Brewery-Project/Manager.java:167: error: illegal start of type
    public void ManagerMenu(Brewery Nova, String ManagerName){
    ^
/Users/ericsimac/OOAD/Brewery-Project/Manager.java:258: error: illegal start of type
=======
^
/Users/ericsimac/OOAD/Brewery-Project/Manager.java:405: error: illegal start of type
>>>>>>> 97ddf2c99925670037267305a651817a70135a92
^
/Users/ericsimac/OOAD/Brewery-Project/Manager.java:405: error: <identifier> expected
>>>>>>> 97ddf2c99925670037267305a651817a70135a92
                                                ^
6 errors
2023.04.20 12:38:10 WARN  no build target for: /Users/ericsimac/OOAD/Brewery-Project/Manager.java
2023.04.20 12:38:11 WARN  Running javac-semanticdb failed for file:///Users/ericsimac/OOAD/Brewery-Project/Manager.java. Output:
/Users/ericsimac/OOAD/Brewery-Project/Manager.java:239: error: illegal start of expression
        }*/
         ^
/Users/ericsimac/OOAD/Brewery-Project/Manager.java:239: error: illegal start of expression
        }*/
          ^
/Users/ericsimac/OOAD/Brewery-Project/Manager.java:240: error: illegal start of expression
    }
    ^
/Users/ericsimac/OOAD/Brewery-Project/Manager.java:243: error: illegal start of expression
    public void restockBeerMenu(){
    ^
4 errors
Apr 20, 2023 12:38:16 PM org.eclipse.lsp4j.jsonrpc.services.GenericEndpoint notify
INFO: Unsupported notification method: $/setTrace
